package it.unibo.pps.e1;

public interface FeePolicy {
    int fee(int amount);
}
